31 May 2012: Matthijs
	- Fix for accept spinning reported by OpenBSD.

17 April 2012: Matthijs
	- Changes according to RFC 5936 (AXFR clarify) and EDNS0bis.

16 April 2012: Matthijs
	- Allow for fd 0 in ipc.
	- Add TLSA RRtype support.

4 April 2012: Matthijs
	- Add ECDSA support for zonec

2 April 2012: Matthijs
	- Undo #235 (so dname compression starts at QNAME again).

28 February 2012: Matthijs
	- Allow reading in new DNSKEY algorithm mnemonics in zonefile.
	  Always write unsigned integer value of algorithm.

27 February 2012: Matthijs
	- Fix for qtype ANY for a wildcard domain in NSEC signed zone.

16 February 2012: Matthijs
	- Fallback to AXFR if IXFR is misinterpreted.

23 January 2012: Wouter
	- remove clang warning from region_log_stats().

20 January 2012: Wouter
	- Fix bug #430: segfault when MAX_INTERFACES set to more than 65K.
	- Fix configure.ac strptime check for gcc 4.6.2, acx_nlnetlabs update.

18 January 2012: Matthijs
	- Fix bug #423: Fix up empty terminals after applying complete
	  XFR, to make zone transfers go fast again

10 January 2012: Wouter
	- Remove unused variables.

6 January 2012: Matthijs
	- Fix bug #421: truncate pidfile on shutdown, instead of unlink.
	  This way, the piddir does not have to fall under nsd ownership.

2 November 2011: Matthijs
	- Apply Secure64 patch (use --disable-full-prehash to activate it)

26 October 2011: Matthijs
	- Custom patch for bug #390 on NSEC3 wildcards.
	- Fix bug #397: an $INCLUDE directive with a relative origin.
	  Don't allow.

17 October 2011: Matthijs
	- configuration option --disable-minimal-responses.
	- Minimize responses to reduce truncation, leave out optional NS
	  RRsets from the authority section and all RRsets from additional
	  section.

10 October 2011: Matthijs
	- Don't clear the AA bit if there is an authoritative CNAME in the
	  answer section (as shown in RFC 1034, Section 6.2.7, 2nd example).

10 October 2011: Wouter
	- squelch EPIPE when writing AXFR, enable with verbosity 2.